--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        submodules: recursive
+    
+    - name: Clean problematic directories
+      run: |
+        # Remove problematic READM1E.md directory if it exists
+        if [ -d "READM1E.md" ]; then
+          rm -rf READM1E.md
+          echo "Removed problematic READM1E.md directory"
+        fi
     
     - name: Setup Xcode
       uses: maxim-lobanov/setup-xcode@v1
@@ -26,12 +32,26 @@ jobs:
       run: |
         # Install Theos
         export THEOS=/opt/theos
+        echo "Installing Theos to $THEOS"
+        
+        # Remove existing Theos if present
+        sudo rm -rf $THEOS || true
+        
+        # Clone Theos
         sudo git clone --recursive https://github.com/theos/theos.git $THEOS
         sudo chown -R $(id -u):$(id -g) $THEOS
         
         # Install iOS SDK
+        echo "Downloading iOS SDK..."
         curl -LO https://github.com/theos/sdks/releases/download/master/iPhoneOS16.5.sdk.tar.xz
+        
+        echo "Extracting iOS SDK..."
         tar -xf iPhoneOS16.5.sdk.tar.xz -C $THEOS/sdks/
+        
+        # Verify installation
+        echo "Verifying Theos installation..."
+        ls -la $THEOS/
+        ls -la $THEOS/sdks/
         
         # Set environment variables
         echo "THEOS=/opt/theos" >> $GITHUB_ENV
@@ -52,9 +72,23 @@ jobs:
         export THEOS=/opt/theos
         export PATH=/opt/theos/bin:$PATH
         
+        # Verify environment
+        echo "THEOS: $THEOS"
+        echo "PATH: $PATH"
+        which make || echo "make not found in PATH"
+        
+        # Show project structure
+        echo "Project files:"
+        ls -la
+        
         # Build the project
-        make clean
-        make package
+        echo "Starting build..."
+        make clean || echo "Clean failed, continuing..."
+        make package FINALPACKAGE=1 FOR_RELEASE=1
+        
+        # Verify build output
+        echo "Build completed, checking output..."
+        ls -la .theos/_/Applications/ || echo "Applications directory not found"
     
     - name: Create .tipa file
       run: |
