--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Setup Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.2'
+        xcode-version: 'latest-stable'
     
     - name: Install Theos
       run: |
@@ -35,8 +35,17 @@ jobs:
         sudo chown -R $(id -u):$(id -g) $THEOS
         
         # Install iOS SDK
-        curl -LO https://github.com/theos/sdks/releases/download/master/iPhoneOS16.5.sdk.tar.xz
-        tar -xf iPhoneOS16.5.sdk.tar.xz -C $THEOS/sdks/
+        if curl -LO https://github.com/theos/sdks/releases/download/master/iPhoneOS16.5.sdk.tar.xz; then
+          tar -xf iPhoneOS16.5.sdk.tar.xz -C $THEOS/sdks/
+        else
+          echo "iOS 16.5 SDK not found, trying iOS 17.0 SDK..."
+          if curl -LO https://github.com/theos/sdks/releases/download/master/iPhoneOS17.0.sdk.tar.xz; then
+            tar -xf iPhoneOS17.0.sdk.tar.xz -C $THEOS/sdks/
+          else
+            curl -LO https://github.com/theos/sdks/releases/latest/download/iPhoneOS.sdk.tar.xz
+            tar -xf iPhoneOS.sdk.tar.xz -C $THEOS/sdks/
+          fi
+        fi
         
         echo "THEOS=/opt/theos" >> $GITHUB_ENV
         echo "PATH=/opt/theos/bin:$PATH" >> $GITHUB_ENV
