--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,19 +44,64 @@ jobs:
         # Install iOS SDK
         echo "Downloading iOS SDK..."
         
-        # Try to download iOS 16.5 SDK first
-        if curl -LO https://github.com/theos/sdks/releases/download/master/iPhoneOS16.5.sdk.tar.xz; then
-          echo "Extracting iOS 16.5 SDK..."
-          tar -xf iPhoneOS16.5.sdk.tar.xz -C $THEOS/sdks/
-        else
-          echo "iOS 16.5 SDK not found, trying iOS 17.0 SDK..."
-          if curl -LO https://github.com/theos/sdks/releases/download/master/iPhoneOS17.0.sdk.tar.xz; then
-            tar -xf iPhoneOS17.0.sdk.tar.xz -C $THEOS/sdks/
-          else
-            echo "Trying latest available SDK..."
-            curl -LO https://github.com/theos/sdks/releases/latest/download/iPhoneOS.sdk.tar.xz
-            tar -xf iPhoneOS.sdk.tar.xz -C $THEOS/sdks/
+        # Try different SDK sources
+        SDK_INSTALLED=false
+        
+        # Try iOS 16.5 SDK from different sources
+        echo "Trying iOS 16.5 SDK..."
+        if curl -f -L -o iPhoneOS16.5.sdk.tar.xz "https://github.com/theos/sdks/releases/download/master/iPhoneOS16.5.sdk.tar.xz" 2>/dev/null; then
+          if tar -tf iPhoneOS16.5.sdk.tar.xz >/dev/null 2>&1; then
+            echo "Extracting iOS 16.5 SDK..."
+            tar -xf iPhoneOS16.5.sdk.tar.xz -C $THEOS/sdks/
+            SDK_INSTALLED=true
           fi
+        fi
+        
+        # Try iOS 17.0 SDK if 16.5 failed
+        if [ "$SDK_INSTALLED" = false ]; then
+          echo "Trying iOS 17.0 SDK..."
+          if curl -f -L -o iPhoneOS17.0.sdk.tar.xz "https://github.com/theos/sdks/releases/download/master/iPhoneOS17.0.sdk.tar.xz" 2>/dev/null; then
+            if tar -tf iPhoneOS17.0.sdk.tar.xz >/dev/null 2>&1; then
+              echo "Extracting iOS 17.0 SDK..."
+              tar -xf iPhoneOS17.0.sdk.tar.xz -C $THEOS/sdks/
+              SDK_INSTALLED=true
+            fi
+          fi
+        fi
+        
+        # Try alternative SDK source
+        if [ "$SDK_INSTALLED" = false ]; then
+          echo "Trying alternative SDK source..."
+          if curl -f -L -o iPhoneOS.sdk.tar.xz "https://github.com/xybp888/iOS-SDKs/releases/download/iOS-SDKs/iPhoneOS16.5.sdk.tar.xz" 2>/dev/null; then
+            if tar -tf iPhoneOS.sdk.tar.xz >/dev/null 2>&1; then
+              echo "Extracting alternative iOS SDK..."
+              tar -xf iPhoneOS.sdk.tar.xz -C $THEOS/sdks/
+              SDK_INSTALLED=true
+            fi
+          fi
+        fi
+        
+        # Use Xcode's built-in SDK as fallback
+        if [ "$SDK_INSTALLED" = false ]; then
+          echo "Using Xcode's built-in iOS SDK..."
+          XCODE_PATH=$(xcode-select -p)
+          IOS_SDK_PATH="$XCODE_PATH/Platforms/iPhoneOS.platform/Developer/SDKs"
+          if [ -d "$IOS_SDK_PATH" ]; then
+            # Find the latest iOS SDK
+            LATEST_SDK=$(ls "$IOS_SDK_PATH" | grep "iPhoneOS.*\.sdk" | sort -V | tail -1)
+            if [ -n "$LATEST_SDK" ]; then
+              echo "Found SDK: $LATEST_SDK"
+              ln -sf "$IOS_SDK_PATH/$LATEST_SDK" "$THEOS/sdks/$LATEST_SDK"
+              SDK_INSTALLED=true
+            fi
+          fi
+        fi
+        
+        if [ "$SDK_INSTALLED" = false ]; then
+          echo "❌ Failed to install any iOS SDK"
+          exit 1
+        else
+          echo "✅ iOS SDK installed successfully"
         fi
         
         # Verify installation
@@ -73,9 +118,17 @@ jobs:
         # Install ldid for code signing
         brew install ldid
         
+        # Install additional tools that might be needed
+        brew install coreutils
+        
         # Verify Theos installation
         ls -la $THEOS
         ls -la $THEOS/sdks/
+        
+        # Show available Xcode SDKs as backup
+        echo "Available Xcode SDKs:"
+        xcrun --show-sdk-path --sdk iphoneos || echo "No iOS SDK found in Xcode"
+        ls -la "$(xcode-select -p)/Platforms/iPhoneOS.platform/Developer/SDKs/" || echo "No Xcode iOS SDKs found"
     
     - name: Build project
       run: |
@@ -88,6 +141,10 @@ jobs:
         echo "PATH: $PATH"
         which make || echo "make not found in PATH"
         
+        # Check available SDKs
+        echo "Available iOS SDKs:"
+        ls -la $THEOS/sdks/ || echo "No SDKs directory found"
+        
         # Show project structure
         echo "Project files:"
         ls -la
@@ -95,7 +152,13 @@ jobs:
         # Build the project
         echo "Starting build..."
         make clean || echo "Clean failed, continuing..."
-        make package FINALPACKAGE=1 FOR_RELEASE=1
+        
+        # Try building with different SDK versions if needed
+        if ! make package FINALPACKAGE=1 FOR_RELEASE=1; then
+          echo "Build failed, trying with different settings..."
+          # Try without specific SDK version
+          make package FINALPACKAGE=1 FOR_RELEASE=1 THEOS_DEVICE_IP= || exit 1
+        fi
         
         # Verify build output
         echo "Build completed, checking output..."
