--- a/makefile.simple
+++ b/makefile.simple
@@ -1,15 +1,5 @@
 ARCHS := arm64
-
-# Auto-detect available iOS SDK
-AVAILABLE_SDKS := $(shell ls $(THEOS)/sdks/ 2>/dev/null | grep "iPhoneOS.*\.sdk" | head -1)
-ifneq ($(AVAILABLE_SDKS),)
-    SDK_VERSION := $(shell echo "$(AVAILABLE_SDKS)" | sed 's/iPhoneOS\([0-9]*\.[0-9]*\)\.sdk/\1/')
-    TARGET := iphone:clang:$(SDK_VERSION)
-else
-    # Fallback to latest
-    TARGET := iphone:clang:latest
-endif
-
+TARGET := iphone:clang
 DEBUG = 0
 FINALPACKAGE = 1
 FOR_RELEASE = 1
@@ -30,12 +20,6 @@ $(APPLICATION_NAME)_FILES += $(wildcard esp/helpers/*.mm)
 $(APPLICATION_NAME)_FILES += $(wildcard esp/unity_api/*.m)
 $(APPLICATION_NAME)_FILES += $(wildcard esp/unity_api/*.mm)
 
-#$(APPLICATION_NAME)_CFLAGS += -mllvm -enable-acdobf -mllvm -bcf_cond_compl=2 -mllvm -bcf_prob=40 -mllvm -bcf_loop=5 -mllvm -enable-strcry -mllvm -bcf_junkasm -mllvm -bcf_junkasm_minnum=1 -mllvm -bcf_junkasm_maxnum=2 -mllvm -enable-adb
-
-# -mllvm -enable-funcwra  -mllvm -enable-indibran -mllvm -enable-constenc 
-
-sources/KIF/UITouch-KIFAdditions.m_CFLAGS := $(filter-out -mllvm -enable-fco,$(crepware_CFLAGS))
-
 $(APPLICATION_NAME)_CFLAGS += -fobjc-arc -Wno-deprecated-declarations -Wno-unused-variable -Wno-unused-value -Wno-module-import-in-extern-c -Wunused-but-set-variable
 $(APPLICATION_NAME)_CFLAGS += -Iheaders
 $(APPLICATION_NAME)_CFLAGS += -Isources
@@ -50,18 +34,13 @@ $(APPLICATION_NAME)_CODESIGN_FLAGS += -Slayout/entitlements.plist
 $(APPLICATION_NAME)_RESOURCE_DIRS = ./layout/Resources
 
 include $(THEOS_MAKE_PATH)/application.mk
-
 include $(THEOS_MAKE_PATH)/aggregate.mk
 
-
 after-package::
-	@sudo rm -r packages
-	@mkdir Payload
-	@sudo cp -r .theos/_/Applications/$(APPLICATION_NAME).app Payload
-	@sudo zip -rq $(APPLICATION_NAME).tipa Payload
-	@sudo chmod +s Payload/$(APPLICATION_NAME).app/$(APPLICATION_NAME)
-	@sudo chown root Payload/$(APPLICATION_NAME).app/$(APPLICATION_NAME)
-	@sudo rm -rf Payload
-	@mkdir packages
-	@sudo mv $(APPLICATION_NAME).tipa packages
-	
+	@rm -rf packages || true
+	@mkdir -p packages
+	@mkdir -p Payload
+	@cp -r .theos/_/Applications/$(APPLICATION_NAME).app Payload
+	@cd Payload && zip -rq ../packages/$(APPLICATION_NAME).tipa .
+	@rm -rf Payload
+	@echo "✅ .tipa created at packages/$(APPLICATION_NAME).tipa"
