--- a/makefile.simple
+++ b/makefile.simple
@@ -21,9 +21,9 @@ $(APPLICATION_NAME)_FILES += $(wildcard esp/unity_api/*.m)
 $(APPLICATION_NAME)_FILES += $(wildcard esp/unity_api/*.mm)
 
 $(APPLICATION_NAME)_CFLAGS += -fobjc-arc -Wno-deprecated-declarations -Wno-unused-variable -Wno-unused-value -Wno-module-import-in-extern-c -Wunused-but-set-variable
-$(APPLICATION_NAME)_CFLAGS += -Iheaders
-$(APPLICATION_NAME)_CFLAGS += -Isources
-$(APPLICATION_NAME)_CFLAGS += -Isources/KIF
+$(APPLICATION_NAME)_CFLAGS += -I$(PWD)/headers
+$(APPLICATION_NAME)_CFLAGS += -I$(PWD)/sources
+$(APPLICATION_NAME)_CFLAGS += -I$(PWD)/sources/KIF
 $(APPLICATION_NAME)_CFLAGS += -DNOTIFY_DESTROY_HUD="\"dev.metaware.external.hud.destroy\""
 $(APPLICATION_NAME)_CFLAGS += -DPID_PATH="@\"/var/mobile/Library/Caches/dev.metaware.external.pid\""
 $(APPLICATION_NAME)_CCFLAGS += -std=c++17
