--- a/makefile.aggressive
+++ b/makefile.aggressive
@@ -20,12 +20,19 @@ $(APPLICATION_NAME)_FILES += $(wildcard esp/helpers/*.mm)
 $(APPLICATION_NAME)_FILES += $(wildcard esp/unity_api/*.m)
 $(APPLICATION_NAME)_FILES += $(wildcard esp/unity_api/*.mm)
 
+# Aggressive header search paths
 $(APPLICATION_NAME)_CFLAGS += -fobjc-arc -Wno-deprecated-declarations -Wno-unused-variable -Wno-unused-value -Wno-module-import-in-extern-c -Wunused-but-set-variable
+$(APPLICATION_NAME)_CFLAGS += -I.
 $(APPLICATION_NAME)_CFLAGS += -Iheaders
+$(APPLICATION_NAME)_CFLAGS += -I./headers
 $(APPLICATION_NAME)_CFLAGS += -Isources
+$(APPLICATION_NAME)_CFLAGS += -I./sources
 $(APPLICATION_NAME)_CFLAGS += -Isources/KIF
+$(APPLICATION_NAME)_CFLAGS += -I./sources/KIF
 $(APPLICATION_NAME)_CFLAGS += -I$(THEOS)/vendor/include
 $(APPLICATION_NAME)_CFLAGS += -I$(THEOS)/include
+$(APPLICATION_NAME)_CFLAGS += -I$(shell pwd)/headers
+$(APPLICATION_NAME)_CFLAGS += -I$(shell pwd)/sources
 $(APPLICATION_NAME)_CFLAGS += -DNOTIFY_DESTROY_HUD="\"dev.metaware.external.hud.destroy\""
 $(APPLICATION_NAME)_CFLAGS += -DPID_PATH="@\"/var/mobile/Library/Caches/dev.metaware.external.pid\""
 $(APPLICATION_NAME)_CCFLAGS += -std=c++17
